# Autonomous_Tangram_Solver

./: .gitignore  README.md  tangram.repos
Models/: train.py
Models/model/: tangram.pth  tangram_cae.pth
Models/scripts/: architectures.py  download_cae.py  download_yolo.py  show_device_name.py  test.py  train_yolo.py  visualize_model.py  wmae.py
Models/test/: tangram_cae
hand_eye_calibration/: CMakeLists.txt  package.xml
hand_eye_calibration/config/: april_tags.yaml  calibrate.rviz
hand_eye_calibration/hand_eye_calibration/: scan_apriltag.py
hand_eye_calibration/include/hand_eye_calibration/: calibrate.hpp
hand_eye_calibration/launch/: calibrate.launch.py
hand_eye_calibration/src/: calibrate.cpp
image_segmentation/: package.xml  setup.py
image_segmentation/image_segmentation/: image_publisher.py  piece_segment.py  puzzle_segment.py  shape_classify.py  shape_detect.py  webcam.py
image_segmentation/launch/: classify.launch.py  detect.launch.py  segmentation.launch.py
image_segmentation/model/: shapes.pt  tangram_cae.pth  update_model.bash
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/tangram_detection/include/tangram_detection/: tangram_detection.hpp
install/tangram_detection/lib/tangram_detection/: tangram_detection
install/tangram_detection/share/ament_index/resource_index/package_run_dependencies/: tangram_detection
install/tangram_detection/share/ament_index/resource_index/parent_prefix_path/: tangram_detection
install/tangram_detection/share/tangram_detection/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/tangram_detection/share/tangram_detection/cmake/: tangram_detectionConfig-version.cmake  tangram_detectionConfig.cmake
install/tangram_detection/share/tangram_detection/environment/: ament_prefix_path.dsv  path.dsv
install/tangram_msgs/share/tangram_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/tangram_msgs/share/tangram_msgs/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_tangram_msgs__rosidl_generator_pyExport-noconfig.cmake  export_tangram_msgs__rosidl_generator_pyExport.cmake  export_tangram_msgs__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake  tangram_msgsConfig-version.cmake  tangram_msgsConfig.cmake  tangram_msgs__rosidl_typesupport_cExport-noconfig.cmake  tangram_msgs__rosidl_typesupport_introspection_cExport.cmake  tangram_msgs__rosidl_typesupport_introspection_cppExport-noconfig.cmake  tangram_msgs__rosidl_typesupport_introspection_cppExport.cmake
install/tangram_msgs/share/tangram_msgs/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
install/tangram_msgs/share/tangram_msgs/msg/: TangramPose.idl  TangramPose.json  TangramPose.msg  TangramPoses.idl  TangramPoses.json  TangramPoses.msg
install/tangram_solver/share/tangram_solver/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
maxarm_control/: CMakeLists.txt  Doxyfile.in  package.xml
maxarm_control/config/: world.yaml
maxarm_control/include/maxarm_control/: arm_control.hpp  frame_align.hpp  robot_control.hpp
maxarm_control/launch/: robot.launch.py
maxarm_control/src/: arm_control.cpp  frame_align.cpp  robot_control.cpp
model/: architectures.py  network.py  train.py
model/model/: tangram.pth  tangram_cae.pth
model/scripts/: download_image.py  download_model.py  network.py  test.py  train.py  train_cae.py
model/test/: epoch_loss_cae.csv
piece_detection/: CMakeLists.txt  package.xml
piece_detection/config/: detection.rviz  realsense_config.json
piece_detection/include/piece_detection/: piece_detection.hpp  rs_pixel_to_real.hpp
piece_detection/launch/: piece_detection.launch.py
piece_detection/src/: piece_detection.cpp  rs_pixel_to_real.cpp
puzzle_solver/: CMakeLists.txt  package.xml
puzzle_solver/config/: env.yaml
puzzle_solver/include/puzzle_solver/: puzzle_solver.hpp  solution_pixel_to_real.hpp  svg_generator.hpp  tangram_match.hpp  tangram_publisher.hpp  web_camera.hpp
puzzle_solver/launch/: puzzle_solver.launch.py
puzzle_solver/model/: tangram_cae.pth
puzzle_solver/src/: puzzle_solver.cpp  solution_pixel_to_real.cpp  svg_generator.cpp  tangram_match.cpp  tangram_publisher.cpp  web_camera.cpp
tangram/: CanvasPolygon.py  CanvasUtils.py  PolygonUtils.py  SolvingThread.py  TangramSolver.py  canva.py  utils.py
tangram_bot/: package.xml  setup.cfg  setup.py
tangram_bot/config/: robot.yaml  tangram.rviz
tangram_bot/launch/: tangram.launch.py
tangram_bot/tangram_bot/: action_executor.py  action_generator.py  robot_commander.py
tangram_detection/: CMakeLists.txt  package.xml
tangram_detection/include/tangram_detection/: image_publisher.hpp  tangram_detection.hpp  tangram_match.hpp
tangram_detection/launch/: tangram_detection.launch.py
tangram_detection/model/: tangram_cae.pth
tangram_detection/src/: image_publisher.cpp  tangram_detection.cpp  tangram_match.cpp
tangram_detection/tangram_detection/: tangram_segment.py
tangram_msgs/: CMakeLists.txt  package.xml
tangram_msgs/action/: ExecuteAction.action  MoveArm.action
tangram_msgs/msg/: PickPlace.msg  PuzzleShape.msg  RobotAction.msg  TangramPiece.msg  TangramPieces.msg  TangramPose.msg  TangramPoses.msg
tangram_msgs/srv/: ReadPosition.srv
tangram_solver/: package.xml  setup.cfg  setup.py
tangram_utils/: CMakeLists.txt  README.md
tangram_utils/include/tangram_utils/: tangram_match.hpp
tangram_utils/src/: tangram_match.cpp
trangram_bot/: CMakeLists.txt  package.xml
(+31 files in other folders)
