<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>maxarm_control</name>
  <version>0.1.1</version>
  <description>Controls the MaxArm robot arm</description>
  <maintainer email="jingkunliu2025@u.northwestern.edu">Allen Liu</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tangram_msgs</depend>
  <depend>CppLinuxSerial</depend>
  <depend>Armadillo</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>