<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>piece_detection</name>
  <version>0.1.1</version>
  <description>Detect the pose of all tangram pieces</description>
  <maintainer email="jingkunliu2025@u.northwestern.edu">Allen Liu</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  <depend>std_srvs</depend>
  <depend>tf2_ros</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>tangram_msgs</depend>
  <depend>OpenCV</depend>
  <depend>tangram_utils</depend>
  <depend>uuid_v4</depend>
  <depend>realsense2</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>