<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tangram_bot</name>
  <version>0.1.1</version>
  <description>Pipeline to have the robot to solve the tangram puzzle</description>
  <maintainer email="jingkunliu2025@u.northwestern.edu">Allen Liu</maintainer>
  <license>MIT</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>tangram_msgs</depend>
  <depend>puzzle_solver</depend>
  <depend>piece_detction</depend>
  <depend>maxarm_control</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>